Make nsStackFrame override GetFrameForPoint in a useful way.  b=241314  r+sr=bzbarsky